<resources>
    <string name="app_name">Aurora</string>
    <string name="login_using_gmail">Login using Gmail</string>
    <string name="string_login_using_gmail" />
    <string name="string_string_login_using_gmail">Login using Gmail</string>
    <string name="aurora">Aurora</string>
    <string name="title_activity_profile">Profile</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="mail">mail</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="todo">TODO</string>
<!--    <string name="notifications">Notifications</string>-->
    <string name="allow_notifications">Allow Notifications</string>
    <string name="click_to_change_time">Click to change time</string>
    <string name="confirm">Confirm</string>

    <string name="how_was_your_day">How was your day</string>
    <string name="submit">Submit</string>
    <string name="joyful">Joyful</string>
    <string name="stressful">Stressful</string>
    <string name="normal">Normal</string>
    <string name="start_survey">Start Survey</string>
    <string name="title_text">Title Text</string>
    <string name="radiobutton">RadioButton</string>
    <string name="question1">Question1</string>
<!--    <string name="radiobutton">RadioButton</string>-->
<!--    <string name="radiobutton">RadioButton</string>-->
<!--    <string name="radiobutton">RadioButton</string>-->
<!--    <string name="name">Name</string>-->
    <string name="always">Always</string>
    <string name="often">Often</string>
    <string name="not_much">Not Much</string>
    <string name="never">Never</string>
    <string name="next">Next</string>
    <string name="score">Score</string>
    <string name="survey">Survey</string>
    <string name="happy">Happy</string>
    <string name="textview">TextView</string>

    <!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
    <!--    <string name="textview">TextView</string>-->
    <!--    <string name="todo">TODO</string>-->
</resources>