<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBD254">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_margin="15dp"
        android:src="@drawable/ic2_round"

        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:text="@string/aurora"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="30sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#636363"/>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center_vertical"-->
<!--        android:onClick="ClickHome">-->

<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Home"-->
<!--            android:padding="12dp"-->
<!--            android:layout_marginStart="16dp"/>-->

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="48dp"-->
<!--            android:src="@drawable/ic_home"/>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center_vertical"-->
<!--        android:onClick="ClickDashboard">-->

<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Dashboard"-->
<!--            android:padding="12dp"-->
<!--            android:layout_marginStart="16dp"/>-->

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="48dp"-->
<!--            android:src="@drawable/ic_dashboard"/>-->

<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center_vertical"-->
<!--        android:onClick="ClickNotifications">-->

<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Notifications"-->
<!--            android:padding="12dp"-->
<!--            android:layout_marginStart="16dp"/>-->

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="48dp"-->
<!--            android:src="@drawable/ic_notifications"/>-->

<!--    </LinearLayout>-->
    <Button
        android:id="@+id/home"
        android:layout_width="282dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackground"
        android:drawableStart="?attr/selectableItemBackgroundBorderless"
        android:drawableEnd="@drawable/ic_home"
        android:drawableRight="@drawable/ic_home"
        android:padding="12dp"
        android:text="@string/home"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textColorHint="#323232" />

    <Button
        android:id="@+id/dashboard"
        android:layout_width="282dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_dashboard"
        android:padding="12dp"
        android:text="@string/dashboard"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textColorHint="#323232" />

    <Button
        android:id="@+id/notifications"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackground"
        android:drawableEnd="@drawable/ic_notifications"
        android:padding="12dp"
        android:text="@string/notifications"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textColorHint="#323232" />



    <!--    <LinearLayout-->
<!--        android:id="@+id/logout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:gravity="center_vertical">-->
<!--&lt;!&ndash;        android:onClick="Clicklogout">&ndash;&gt;-->
<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Logout"-->
<!--            android:padding="12dp"-->
<!--            android:layout_marginStart="16dp"/>-->

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="48dp"-->
<!--            android:src="@drawable/ic_logout"/>-->


<!--    </LinearLayout>-->


</LinearLayout>

<!--<Button-->
<!--android:id="@+id/logout"-->
<!--android:layout_width="285dp"-->
<!--android:layout_height="45dp"-->
<!--android:layout_marginStart="16dp"-->
<!--android:background="?attr/selectableItemBackground"-->
<!--android:drawableEnd="@drawable/ic_logout"-->
<!--android:padding="12dp"-->
<!--android:text="@string/logout"-->
<!--android:textAlignment="viewStart"-->
<!--android:textColor="#323232"-->
<!--android:textColorHint="#323232" />-->

<!--android:layout_margin="15dp" shifts vertically from top of the margin page-->